sample fixes for Arena API change.